[package]
name = "cargo-rtml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.14.4"
clap = { version = "3", features = ["derive"] }
warp = "0.3.2"
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
notify = { version = "4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
futures-util = { version = "0.3" }
owo-colors = "3.4.0"