[package]
name = "rtml-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zh-CN"]
zh-CN = []
en-US = []

[dependencies]
rtml = { path = "../rtml" }
wasm-bindgen = "0.2"
tracing = { version = "0.1" }
tracing-wasm = "0.2.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }


[lib]
crate-type = ["cdylib", "rlib"]
