[package]
name = "rtml-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtml-share = { path = "../share" }
tracing = { version = "0.1" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Location",
    "WebSocket",
    "HtmlCollection",
    "Event",
    "EventTarget",
] }
