[package]
name = "rtml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }
tracing = { version = "0.1" }
tracing-wasm = "0.2.1"

[dev-dependencies]
opener = "0.5"
