[package]
name = "rtml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["zh-CN"]
zh-CN = []
en-US = []

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Location",
    "WebSocket",
    "HtmlCollection",
    "Event",
    "EventTarget",
] }
tracing = { version = "0.1" }
tracing-wasm = "0.2.1"
