[package]
name = "rtml-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtml = { path = "../rtml" , features = ["wasm"]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }

[lib]
crate-type = ["cdylib", "rlib"]
