[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rtml = { path = "../../crates/rtml" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    'Storage',
    "KeyboardEvent",
    "HtmlInputElement"
] }
js-sys = { version = "0.3" }
tracing = { version = "0.1" }
tracing-wasm = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }


[lib]
crate-type = ["cdylib", "rlib"]


[build-dependencies]
rtml = { path = "../../crates/rtml" }
rtml-project = { path = "../../crates/project" }